Removed need for tileMatrixSet for WMS layer

--- a/index.html
+++ b/index.html
@@ -382,8 +382,7 @@ and open the template in the editor.
                                         heightMapWidth : 256,
                                         waterMask      : false,
                                         options: {
-                                            mimetype  : "image/png",
-                                            tileMatrixSet: 'WGS84G'
+                                            mimetype  : "image/png"
                                         }
                                     });
 
